# uncertainty-engine-sdk

./: .env.example  .gitignore  DEV_README.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: e2e-environment.yaml  e2e_tests.yaml  linting_formatting.yaml  unit_functional_tests.yaml  unit_tests.yaml
CI/: run_formatter_code.sh  run_linter.sh  run_tests_e2e.sh  run_tests_functional.sh  run_tests_unit.sh
docs/build_md/doctrees/: api.doctree  (+2 more)
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  overview.rst  usage.rst
examples/: README.md  add.ipynb  create_variational_gp.ipynb  demo_add.ipynb  demo_node.ipynb  demo_resource.ipynb  demo_save_load.ipynb  demo_save_load_workflow.ipynb  demo_train.ipynb  demo_train_predict.ipynb  demo_workflow.ipynb  input_dump.json  node.ipynb  resource.ipynb  save_load_workflow.ipynb  scope_metadata.ipynb  simplified_data_management copy.ipynb  simplified_data_management.ipynb  test_query_nodes.py  train_predict.ipynb  train_variational_gp_workflow.json  validation.ipynb  workflow.ipynb  workflow_with_validation.ipynb
examples/data/: trained_model.json
git_hooks/: pre-push
tests/: conftest.py  mock_api_invoker.py  run.py
tests/e2e/: test_client_e2e.py
tests/functional/: test_visualize_graph.py
tests/unit/: conftest.py  test_api_invoker.py  test_auth_provider.py  test_auth_service.py  test_client.py  test_cognito_authenticator.py  test_cognito_token.py  test_environment.py  test_graph.py  test_mock_api_invoker.py  test_resource_provider.py  test_uri.py  test_utils.py  test_validation.py  test_visualization.py  test_workflow_validator.py
uncertainty_engine/: __init__.py  api_invoker.py  auth_provider.py  auth_service.py  client.py  cognito_authenticator.py  cognito_provider.py  graph.py  node_query_types.py  resource_provider.py  tool_models.py  uri.py  utils.py  validation.py  visualization.py  workflow_validator.py
uncertainty_engine/api_providers/: __init__.py  api_provider.py  auth_provider.py  constants.py  models.py  projects_provider.py  resource_provider.py  workflow_provider.py  workflows_provider.py
uncertainty_engine/environments/: demo.json  dev.json  environment.py  local.json  uat.json
uncertainty_engine/exceptions/: __init__.py  graph_validation_error.py  node_validation_error.py  validation_error.py  workflow_validation_error.py
uncertainty_engine/nodes/: base.py  basic.py  demo.py  machine_learning.py  resource_management.py  sensor_designer.py  workflow.py
uncertainty_engine/protocols/: __init__.py  client.py
uncertainty_engine_client/: bed_client.py  client_test.ipynb  indica_demo.ipynb
(+207 files in other folders)
