[project]
name = "uncertainty_engine"
version = "0.0.1"
description = "SDK for the Uncertainty Engine"
authors = [
    {name = "digiLab Solutions Ltd.",email = "info@digilab.co.uk"}
]
maintainers = [
    {name = "Jamie Donald-McCann",email = "jamie@digilab.co.uk"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
# TODO: Update workflow_types once the package is published
workflow_types = { git = "https://github.com/digiLab-ai/workflow-types.git", branch = "main" }
typeguard = "^4.4.1"
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
