[project]
name = "uncertainty_engine"
version = "0.0.1"
description = "SDK for the Uncertainty Engine"
authors = [{ name = "digiLab Solutions Ltd.", email = "info@digilab.ai" }]
maintainers = [
    { name = "Jamie Donald-McCann", email = "jamie.donald-mccann@digilab.ai" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# TODO: Update uncertainty_engine_types once the package is published
uncertainty_engine_types = { git = "https://github.com/digiLab-ai/uncertainty-engine-types.git", branch = "main" }
typeguard = ">=2.13.3,<2.14.0"
requests = "^2.32.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
